# amrit-cms

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Shuttle.toml  sqlx-data.json
.github/workflows/: general.yml
.sqlx/: query-00349f769a70c62a829f8297608a2750c5726abfc9ffbb6b9082889bc2e2173f.json  query-225593da14771a482c7ad6519b86ccb104028cbaad3c4cc3fef2b6e24489ca10.json  query-2feb41565475dcb5ce24b8c9359b3e66ff15557b35f800f87ef11c1db7b5cb9e.json  query-356b15096769f073dedc600bc987f348eb87e05965056205e32d57b0078eab8a.json  query-397cd960b655153ec6f3aebba6c86a89cfa989ce196741e3ff8e6430c1cf91aa.json  query-3ca8d8dab09b2e403d742bd4771a37ac73f72347e927d32e6b725e56fba3f369.json  query-415e0ba2da2022c2dc2ebd822d47d1f47c343ec0a1f01add4c6d49f3b93c70cb.json  query-4752c6129c514513bdb7e3f4860760f91fc1ad64b25a7b910c5f06fd1dec28a2.json  query-51a014dbf2340024dbae41e4bf0a03a737e022cc5174057d4ae5b918ce25e129.json  query-536a5e0bc8918d84110a700766c0ff0039b55d0415d6338e0a3182561c865db0.json  query-5374e93ae2036e65cd483ac0a03d287c8dcfa93362b11489e29ce2c1fc6822c7.json  query-611625ecb23f5d2f2fc5b198e11c1d20d93f00b403a97dc835b1c5ce39fb942c.json  query-6968044178d51308c94820a4ee8dbf637d06080da7ec6c1b5108e6e200472ac5.json  query-6dada41b54a586d8cb942ed2a387a8e48962e14e5121c6dca0e951f903e95c75.json  query-792c9ed4d91c212ce149732fd25ac2ba3d3f49441c0aa85c266df017734151c1.json  query-7cc6c04895b8241084de6e40fadee7beb50df1443e59d7f33d9f4f10b81b949f.json  query-9543a4851d7e0c75c398f682a862e31407f1a1f5ce8ffaabc05193efd7fefcde.json  query-96eaf3298aa17ea695715b4a1899fc7fca02a62084b9c1517e0e8b60930cdb6c.json  query-9922245f5502bb73e2c487d753bccd6aaac2cecaa84f0adfcc3f5dbd53b88db1.json  query-a979e203519e06d4da6bc5e932b59d4278148af28536fafa3534381156fb32c7.json  query-c03eb59ca2e6305208c7725599add4a45420974e77ef3b26dfb96387edd8f797.json  query-cdba49d0d00abfd3e777651aacfdec845231ebef41b6d36c57cec19ce02d47b9.json  query-da8ed375a7ca5424caf7ff63af2c3cb83520770cbc9296fc5771213e6466c307.json  query-dcfafa68c367ed259d6d94688cd938410532971dd435804eb92ff2a3e21d8c83.json  query-e55e4a9b08f3e00390aa06b94b966b88823e1dc643008d26677fd8d3741e1241.json  query-ef94e674416dde6ea58da8b38e0a8b23c58d19886ace812a3ce7a0fe3541b0b4.json  query-efc969a4d1f67143c876775ca98d020b8a410a4d5b12957068e28c335058e5e7.json  query-f3f0654493e28416e320f2a8811efa95f9120e02cec1f305a8b90f63fdee21af.json
admin_client/: Cargo.toml
api_server/: Cargo.toml
api_server/src/: main.rs
api_server/src/handlers/: mod.rs
api_server/src/routes/: mod.rs
api_server/tests/: health_check.rs
backend/api_server/: Cargo.toml
backend/api_server/src/: apps.rs  lib.rs  macros.rs  main.rs  migrate.rs  telemetry.rs
backend/api_server/src/handlers/: mod.rs
backend/api_server/src/routes/: client.rs  mod.rs
backend/api_server/tests/: health_check.rs  not_found.rs
backend/auth_service/: Cargo.toml
backend/auth_service/migrations/: 20240217140157_create_user_table.up.sql  20240217140231_create_confirmation_table.down.sql  20240217140231_create_confirmation_table.up.sql  20240222045957_create_session_table.up.sql
backend/auth_service/src/: extractor.rs  helper.rs  lib.rs  payload.rs  router.rs
backend/auth_service/src/errors/: auth.rs  confirm.rs  mod.rs  user.rs
backend/auth_service/src/extractors/: authentication.rs  confirmation.rs  mod.rs  session.rs  user.rs
backend/auth_service/src/handlers/: confirmation.rs  login.rs  logout.rs  me.rs  mod.rs  registration.rs  reset.rs
backend/auth_service/src/helpers/: confirmation.rs  mod.rs  sessions.rs  user.rs
backend/auth_service/tests/: check_reset.rs  confirm.rs  initiate_reset.rs  login.rs  logout.rs  register.rs  resend_verification.rs  reset_password.rs
backend/auth_service/tests/common/: mod.rs
backend/subscription_service/: Cargo.toml  build.rs
backend/subscription_service/migrations/: 20230811124055_add_status_to_subscription.sql  20230811124353_add_subscription_token_table.sql
backend/subscription_service/src/: extractor.rs  handler.rs  helper.rs  lib.rs  router.rs
backend/subscription_service/src/errors/: confirmation.rs  mod.rs  newsletter.rs  subscribe.rs
backend/subscription_service/tests/: confirm.rs  helper.rs  newsletter.rs  subscribe.rs
backend/util_macros/: Cargo.toml
backend/util_macros/src/: lib.rs
backend/utils/: Cargo.toml
backend/utils/src/: configuration.rs  email.rs  errors.rs  lib.rs  state.rs  test.rs  validation.rs
backend/utils/tests/: emails.rs
config/: default.yaml  development.yaml  production.yaml  test.yaml
frontend/: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  tailwind.config.js
frontend/assets/: base.html  tailwind.css
frontend/client/: Cargo.toml  Dioxus.toml  Trunk.toml  index.html  tailwind.config.js
frontend/client/src/: app.rs  index.html  lib.rs  main.rs
frontend/components/: Cargo.toml
frontend/components/src/: lib.rs
frontend/components/src/nav/: menu_button.rs  mod.rs  navbar.rs
frontend/components/src/svg/: mod.rs
frontend/src/: app.rs  lib.rs  main.rs  routes.rs  state.rs
frontend/src/components/: button.rs  error_line.rs  input.rs  mod.rs  toast.rs
frontend/src/components/navbar/: authenticated.rs  mod.rs
frontend/src/entities/: input.rs  mod.rs  toast.rs  user.rs
frontend/src/errors/: mod.rs
frontend/src/pages/: mod.rs
frontend/src/pages/auth/: confirm.rs  layout.rs  mod.rs  not_verified.rs  signin.rs  signup.rs
frontend/src/pages/auth/reset/: initiate.rs  mod.rs  reset_link.rs
frontend/src/utils/: api.rs  mod.rs
frontend/src/utils/api/: confirm.rs  logout.rs  me.rs  mod.rs  reset.rs  sign_in.rs  sign_up.rs
frontend_client/: Cargo.toml
scripts/: init_db.sh
translations/: Cargo.toml
yew_components/: Cargo.toml
