[workspace]
members = [
    "common/translations",
    "backend/api_server", "backend/auth_service", "backend/subscription_service",
    "backend/utils", "backend/util_macros", "frontend/components", "frontend/client"]
resolver = "2"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[workspace.dependencies]
# Backend dependencies
async-trait = "0.1.77"
axum = "0.7.4"
axum-extra = {version = "0.9.2", features = ["cookie", "cookie-signed"]}
hyper = { version = "1.1.0", features = ["full"] }
mime = "0.3.16"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tracing = {version = "0.1.37", features = ["log"] }
validator = { version = "0.16.0", features = ["validator_derive", "derive", "unic"] }
uuid = { version = "1.3.0", features = ["v4", "serde", "js"] }
unicode-segmentation = "1.10.1"
claims = "0.7.1"
url = "2.4.1"
linkify = "0.10.0"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.50"
axum-macros = "0.4.1"
futures = "0.3.30"
sqlx = {version = "0.7.3", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "json"
]}
tower = { version = "0.4.13", features = ["util", "tracing", "tokio"] }
fake = { version = "2.9.2", features = ["derive"] }
quote = { version = "1.0.35", features = [] }
syn = "2.0.48"
log = "0.4.17"
once_cell = "1.17.1"
tracing-log = "0.2.0"
tower-http = {version = "0.5.1", features = ["request-id", "trace", "util"], optional = false, default-features = false}
tracing-subscriber = {version = "0.3.16", features = ["env-filter", "registry", "tracing-log"], optional = false}
config = "0.13.3"
secrecy = { version = "0.8.0", features = ["serde"] }
lettre = { version = "0.11.4", features = ["tracing", "tokio1-native-tls", "tokio1"] }
anyhow = "1.0.69"
phf = { version = "0.11.2", features = ["macros"] }
hyper-util = {version = "0.1.2", features = ["client-legacy", "client"]}
http-body-util = "0.1.0"
chrono = { version = "0.4.33", features = ["serde"] }
sha2 = "0.10.6"
rustrict = "0.7.21"
argon2 = "0.5.3"
zxcvbn = "2.2.2"
regex = "1.7.1"


# Frontend dependencies
dioxus = "0.5.0-alpha.0"
dioxus-fullstack = { version = "0.5.0-alpha.0", features = ["axum", "dioxus-ssr"] }