[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api_server"

[dependencies]
axum = "0.6.4"
hyper = { version = "0.14.24", features = ["full"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.5", features = ["trace"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
