[package]
name = "api_server"
edition = "2021"
version = "0.1.0"

[dependencies]
axum.workspace = true
log.workspace = true
once_cell.workspace = true
tracing-log.workspace = true
hyper.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
utils = {path="../utils"}
subscription_service = {path="../subscription_service"}

[dev-dependencies]
hyper-util.workspace=true
http-body-util.workspace=true


[lib]
path = "src/lib.rs"
plugin = false
proc-macro = false
required-features = []

[[bin]]
path = "src/main.rs"
name = "api_server"
plugin = false
proc-macro = false
required-features = []
