[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
util_macros = { path = "../util_macros" }
axum.workspace = true
axum-extra.workspace = true
sqlx.workspace = true
chrono.workspace = true
secrecy.workspace = true
uuid.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
tracing.workspace = true
thiserror.workspace = true
validator.workspace = true
rustrict.workspace = true
argon2.workspace = true
zxcvbn.workspace = true
url.workspace = true
once_cell.workspace = true
regex.workspace = true
async-trait.workspace = true
email-clients.workspace = true
tokio.workspace = true


[dev-dependencies]
fake.workspace = true
tower.workspace = true
http-body-util.workspace = true
