[package]
name = "subscription_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
hyper = { version = "0.14.24", features = ["full"] }
mime = "0.3.16"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
utils = {path="../utils"}
validator = { version = "0.16.0", features = ["validator_derive", "derive"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
