[package]
name = "subscription_service"
version = "0.1.0"
edition = "2021"


[dependencies]
axum.workspace = true
hyper.workspace = true
mime.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
validator.workspace = true
uuid.workspace = true
unicode-segmentation.workspace = true
claims.workspace = true
url.workspace = true
linkify.workspace = true
rand.workspace = true
thiserror.workspace = true
axum-macros.workspace = true
futures.workspace = true
sqlx.workspace = true
chrono.workspace = true

utils = {path="../utils"}
util_macros = {path= "../util_macros" }


[dev-dependencies]
tower.workspace = true
fake.workspace = true
rand.workspace = true
http-body-util.workspace=true
