[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
axum = "0.6.4"
config = "0.13.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
validator = "0.16.0"
secrecy = { version = "0.8.0", features = ["serde"] }
lettre = { version = "0.10.3", features = ["tracing"] }
anyhow = "1.0.69"
mime = "0.3.16"
phf = { version = "0.11.2", features = ["macros"] }


[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "time",
    "migrate",
    "offline"
]

[build-dependencies]
config = "0.13.3"
serde = { version = "1.0.152", features = ["derive"] }
