[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
axum.workspace = true
config.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
validator.workspace = true
secrecy.workspace = true
lettre.workspace = true
anyhow.workspace = true
mime.workspace = true
phf.workspace = true
tokio.workspace = true
sqlx.workspace = true
linkify.workspace = true
tracing.workspace = true
http-body-util.workspace = true


[build-dependencies]
config.workspace = true
serde.workspace = true
