[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log.workspace = true
sycamore = { version = "0.9.0-beta.2", features = ["hydrate", "suspense"] }
sycamore-router = "0.9.0-beta.2"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["HtmlInputElement", "InputEvent"] }
components = { path = "../components" }