[package]
name = "client"
version = "0.1.0"
authors = ["Amrit Ghimire <mail@amritghimire.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router", ] }
manganis = "0.2.1"

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"

[features]
default = ["dioxus/web"]
